# tcp

./: .gitignore  .pylintrc  MANIFEST.in  README.md  config.ini  hash.py  pyproject.toml  read.py  requirements.txt  server.py
as_tcp/: __init__.py  __main__.py  client.py  config.ini  server.py  setup.py  util.py
tests/: integration_test.py  run_tests.py  unit_test.py
